--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,6 +35,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCfDk4DRjpHpC4C6HsSuFaDV5XmkCuXHEY" />
+            android:value="API_KEY" />
     </application>
 </manifest>
